WD: fix menu collapsable

--- a/assets/css/global.styles.css
+++ b/assets/css/global.styles.css
@@ -1181,7 +1181,7 @@ button {
             max-height: 800px; } }
         .wd-menu__panel-content__item:last-child > a {
           border: none; }
-        .wd-menu__panel-content__item > a {
+        .wd-menu__panel-content__item a {
           -webkit-align-items: flex-start;
               -ms-flex-align: start;
                   align-items: flex-start;
@@ -1198,17 +1198,17 @@ button {
           overflow: hidden;
           line-height: 1.8em;
           transition: all 300ms linear; }
-          @media all and (min-width: 948px) {
-            .wd-menu__panel-content__item > a:hover {
-              background: #e2b241;
-              transition: all 300ms linear; } }
           @media all and (min-width: 648px) {
-            .wd-menu__panel-content__item > a {
+            .wd-menu__panel-content__item a {
               -webkit-align-items: center;
                   -ms-flex-align: center;
                           -ms-grid-row-align: center;
                       align-items: center;
               line-height: 2.5em; } }
+          @media all and (min-width: 948px) {
+            .wd-menu__panel-content__item a:hover {
+              background: #e2b241;
+              transition: all 300ms linear; } }
         .wd-menu__panel-content__item.submenu {
           position: relative; }
           .wd-menu__panel-content__item.submenu a {
@@ -1233,7 +1233,8 @@ button {
                     flex-direction: column;
             height: 0;
             opacity: 0;
-            transition: all 300ms linear; }
+            transition: all 300ms linear;
+            pointer-events: none; }
             .wd-menu__panel-content__item.submenu ul > li {
               width: 100%; }
               .wd-menu__panel-content__item.submenu ul > li > a {
@@ -1269,7 +1270,8 @@ button {
             .wd-menu__panel-content__item.submenu.open > ul {
               transition: all 300ms linear;
               height: 100%;
-              opacity: 1; }
+              opacity: 1;
+              pointer-events: initial; }
               .wd-menu__panel-content__item.submenu.open > ul > li > a {
                 color: #000; }
                 @media all and (min-width: 948px) {
