--- a/components/menu/styles.scss
+++ b/components/menu/styles.scss
@@ -94,7 +94,7 @@ $color-cuatro: #000;
 						border: none;
 					}
 				}
-				> a{
+				a{
 					align-items: flex-start;
 					display: flex;
 					width: 100%;
@@ -107,15 +107,15 @@ $color-cuatro: #000;
 				    overflow: hidden;
 				    line-height: 1.8em;
 				    transition: all 300ms linear;
+				    @media all and (min-width: 648px){
+				    	align-items: center;
+    					line-height: 2.5em;
+				    }
 				    @media all and (min-width: 948px){
 				    	&:hover{
 				    		background: $color-dos;
 				    		transition: all 300ms linear;
 				    	}
-				    }
-				    @media all and (min-width: 648px){
-				    	align-items: center;
-    					line-height: 2.5em;
 				    }
 				}
 				&.submenu{
@@ -140,6 +140,7 @@ $color-cuatro: #000;
 						height: 0;
 						opacity: 0;
 						transition: all 300ms linear;
+						pointer-events: none;
 						>li{
 							width: 100%;
 							>a{
@@ -176,6 +177,7 @@ $color-cuatro: #000;
 							transition: all 300ms linear;
 							height: 100%;
 							opacity: 1;
+							pointer-events: initial;
 							>li{
 								>a{
 									color: $color-cuatro;
